# ChangeLog for x11-libs/qt-phonon
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/qt-phonon/ChangeLog,v 1.41 2009/10/16 19:55:29 wired Exp $

  16 Oct 2009; Alex Alexander <wired@gentoo.org>
  qt-phonon-4.6.0_beta1.ebuild:
  added keywords: ~alpha ~arm ~hppa ~ia64 ~ppc ~ppc64 ~x86-fbsd

*qt-phonon-4.6.0_beta1 (16 Oct 2009)

  16 Oct 2009; Alex Alexander <wired@gentoo.org>
  +qt-phonon-4.6.0_beta1.ebuild:
  added version 4.6.0_beta1

  11 Oct 2009; Raúl Porcel <armin76@gentoo.org> qt-phonon-4.5.2.ebuild:
  alpha stable wrt #286653

  09 Oct 2009; Markus Meier <maekke@gentoo.org> qt-phonon-4.5.2.ebuild:
  amd64/arm/x86 stable, bug #286653

  07 Oct 2009; nixnut <nixnut@gentoo.org> qt-phonon-4.5.2.ebuild:
  ppc stable #286653

*qt-phonon-4.5.3 (04 Oct 2009)

  04 Oct 2009; Alex Alexander <wired@gentoo.org> +qt-phonon-4.5.3.ebuild:
  version bump

*qt-phonon-4.5.2 (27 Jun 2009)

  27 Jun 2009; Ben de Groot <yngwin@gentoo.org> +qt-phonon-4.5.2.ebuild:
  Version bump

  08 Jun 2009; Jeroen Roovers <jer@gentoo.org> qt-phonon-4.5.1.ebuild:
  Stable for HPPA (bug #266201).

  06 Jun 2009; Markus Meier <maekke@gentoo.org> qt-phonon-4.5.1.ebuild:
  amd64 stable, bug #266201

  02 Jun 2009; Christian Faulhammer <fauli@gentoo.org>
  qt-phonon-4.5.1.ebuild:
  stable x86, bug 266201

  28 May 2009; Robert Piasek <dagger@gentoo.org> qt-phonon-4.5.1.ebuild:
  stable on arm (bug #266201)

  15 May 2009; Tobias Klausmann <klausman@gentoo.org>
  qt-phonon-4.5.1.ebuild:
  Stable on alpha, bug #266201

  14 May 2009; Ben de Groot <yngwin@gentoo.org> -qt-phonon-4.5.0.ebuild:
  Remove old

  13 May 2009; Brent Baude <ranger@gentoo.org> qt-phonon-4.5.1.ebuild:
  Marking qt-phonon-4.5.1 ppc stable for bug 266201

*qt-phonon-4.5.1 (27 Apr 2009)

  27 Apr 2009; Markos Chandras <hwoarang@gentoo.org>
  +qt-phonon-4.5.1.ebuild:
  Version bump to 4.5.1

  21 Mar 2009; Raúl Porcel <armin76@gentoo.org> qt-phonon-4.5.0.ebuild: